# robotframework-roboops

./: .gitignore  .project  Dockerfile  README.md  cd.robot  ci.robot  mypy.ini  pipeline.robot  pyproject.toml  red.xml
.github/workflows/: ci.yml  ci_cd.yml
RoboOps/: RoboOps.py  __init__.py
atest/: __init__.robot  happy_path.robot  pyproject.toml  settings.robot  task_failure_tests.robot
utest/: conftest.py  test_errors_are_fatal_listener.py  test_run_command.py  test_save_artifact.py
