[tool.poetry]
name = "roboops-atest"
version = "1.0.0"
description = "clean env for acceptance tests for roboops"
authors = ["Łukasz Sójka <soyacz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^3.2.2"
robotframework-roboops = {path = ".."}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# robotframework-roboops = { path = "../", develop = false }